--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,3 @@
-<!-- result.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@
         }
         .container input[type="text"] {
             padding: 10px;
-            width: 250px;
+            width: 500px;
             border: none;
             border-radius: 5px;
             font-size: 16px;
@@ -54,7 +53,7 @@
     <div class="container">
         <h1>Enter the description: </h1>
         <form method="post">
-            <input type="text" name="keywords" placeholder="type here" autocomplete="off" required>
+            <input type="text" name="keywords" placeholder="Type here..." autocomplete="off" required>
             <button type="submit">Submit</button>
         </form>
         {% if image %}
